--- a/application/pom.xml
+++ b/application/pom.xml
@@ -8,19 +8,27 @@
 		<version>2.6.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	
 	<groupId>com.app</groupId>
 	<artifactId>application</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>application</name>
 	<description>Demo project for Spring Boot</description>
+	
 	<properties>
-		<java.version>11</java.version>
+		<java.version>8</java.version>
+		<swagger.version>2.9.2</swagger.version>
+		<swagger.model.version>1.5.21</swagger.model.version>
+		<lambok.version>1.18.22</lambok.version>
+		<spring.validation.version></spring.validation.version>
 	</properties>
+	
 	<dependencies>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		</dependency> -->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -31,10 +39,40 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		
+		<!-- <dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
+		</dependency> -->
+		
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>${lambok.version}</version>
+		    <optional>true</optional>
+		</dependency>
+		
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		
+		<dependency>
+		 <groupId>io.springfox</groupId>
+		 <artifactId>springfox-swagger2</artifactId>
+		 <version>${swagger.version}</version>
+		</dependency>
+		<dependency>
+		 <groupId>io.swagger</groupId>
+		 <artifactId>swagger-models</artifactId>
+		 <version>${swagger.model.version}</version>
+		</dependency>
+		<dependency>
+		 <groupId>io.springfox</groupId>
+		 <artifactId>springfox-swagger-ui</artifactId>
+		 <version>${swagger.version}</version>
+		 <scope>compile</scope>
 		</dependency>
 	</dependencies>
 
