--- a/application/pom.xml
+++ b/application/pom.xml
@@ -63,11 +63,11 @@
 		 <artifactId>springfox-swagger2</artifactId>
 		 <version>${swagger.version}</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 		 <groupId>io.swagger</groupId>
 		 <artifactId>swagger-models</artifactId>
 		 <version>${swagger.model.version}</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 		 <groupId>io.springfox</groupId>
 		 <artifactId>springfox-swagger-ui</artifactId>
