logging basic set up

--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 server.servlet.context-path = /rest
+logging.level.org.springframework.web=error
+logging.level.s7.Application = WARN
+logging.level.com.app = DEBUG
+#Logging pattern for console
+logging.pattern.console=%d{yyyy-mm-dd HH:mm:ss } [%thread] %X{correlationId} [%-5level] %class{0} - %msg%n
+#logging pattern for file
+logging.pattern.file=%d{yyyy-mm-dd HH:mm:ss } [%thread] %X{correlationId} [%-5level] %class{0} - %msg%n
+#logging file name
+logging.file.name=./log/Application.log
+#logging maximum file size
+logging.logback.rollingpolicy.max-file-size=5KB
+logging.logback.rollingpolicy.file-name-pattern=./log/Application-%d{yyyy-MM-dd}.%i.log
+logging.logback.rollingpolicy.max-history=30
